<resources>
    <string name="app_name">GestureCalc</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="decimal">.</string>
    <string name="negate">\u00b1</string> <!-- ± -->
    <string name="equals">=</string>
    <string name="plus">+</string> <!-- + -->
    <string name="minus">\u2212</string>
    <string name="times">\u00d7</string> <!-- alt+0215 (num pad) -->
    <string name="divide">\u00f7</string> <!-- alt+0247 (num pad) -->
    <string name="percent">%</string>
    <string name="parentheses">( )</string>
    <string name="clear">C</string>
    <string name="resetDefaults">Reset</string>
    <string name="activationSites">Sites</string>
    <string name="noSites">No Sites</string>
    
    <string-array name="spinner_entries">
        <item>Default</item>
    </string-array>
</resources>
